--- a/app/styles/scss/_page.scss
+++ b/app/styles/scss/_page.scss
@@ -45,6 +45,10 @@
   }
 }
 
+.full-bleed-image {
+  text-align: center;
+}
+
 .block-quote {
   border-left: 4px solid $pitch-black;
   margin-left: 0;
